--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects </a>
+              <a class="nav-link" href="#profile">Profile </a>
             </li>
 
             <li class="nav-item">
@@ -78,13 +78,13 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img
-        src="img/IMG_0042.JPG"
+        src="img/ptf1.jpg"
         alt="Lailay"
         width="200"
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Lailay</h1>
-      <p class="lead">Skateboarder</p>
+      <p class="lead">ngewe</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -97,28 +97,19 @@
     <!-- About -->
     <section id="about">
       <div class="container">
-        <div class="row text-centers">
+        <div class="row text-center">
           <div class="col text-center mb-3">
             <h2>About me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
-              tenetur rem tempora perspiciatis, quam perferendis, laudantium quo
-              eum dolor provident atque accusamus fugiat voluptas asperiores
-              odit voluptate eveniet, laboriosam nostrum!
+          <div class="col-md-12">
+            <p class="text-center">
+              Hi there! thank's for stopping by. <br />
+              My name is Lailay Yasykur Fajri
             </p>
           </div>
-          <div class="col-md-4">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repellendus maxime exercitationem earum non ullam architecto
-              veniam. Quis, et. Laudantium unde optio repudiandae accusantium
-              neque ab sed eos cum temporibus amet.
-            </p>
-          </div>
+          <div class="col-md-4"></div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -132,28 +123,28 @@
     <!-- akhir about -->
 
     <!-- projects -->
-    <section id="projects">
+    <section id="profile">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>My Profile</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/ptf1.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/ptf4.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text">
-                  Selesai minta sumbangan, langsung maen skateboard. Bersama
-                  ocan, alex, dll.
+                  Mau nanya donk kalau beli produk lokal lebih suka <br />
+                  dapet stiker gratis apa dapet tubuh sexy
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/ptf3.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/ptf6.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text">
                   akhirnya si ganteng pun nikah sama wanita pilihannya dan
@@ -164,11 +155,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/ptf2.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/ptf5.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text">
-                  Selesai minta sumbangan, langsung maen skateboard. Bersama
-                  ocan, alex, dll.
+                  Mandi dulu ah biar ganteng <br />
+                  #Ucap seorang yg jarang mandi
                 </p>
               </div>
             </div>
