--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio | Lailay</title>
+    <title>ANAK KETUA DPR</title>
   </head>
   <body>
     <!-- navbar -->
@@ -84,7 +84,7 @@
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Lailay</h1>
-      <p class="lead">ngewe</p>
+      <p class="lead">HAYO NGAPAIN BUKA-BUKA</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
